Fix overlapping layout and responsive issues

--- a/sec6.css
+++ b/sec6.css
@@ -72,13 +72,13 @@
     span{
         font-size: 20px;
         font-weight: 600;
-        margin-top:50px;
+        margin-top:250px;
         margin-bottom:50px;
     }
     h1{
         font-size: 50px;
         font-weight: 600;
-        margin-top:30px;
+        margin-top:280px;
         margin-bottom:50px;
     }
     .sec-7-1{
